# gurbanilens

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PHASE_1_CONCLUSION.md  README.md  STATUS.md  pyproject.toml
android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/core/: build.gradle.kts
android/gradle/: libs.versions.toml
core/: pyproject.toml
core/gurbanilens/: __init__.py  asr.py  corpus.py  matcher.py
core/tests/portparity/: README.md  regenerate.py  test_portparity_python.py  test_vectors.json
dataset/: README.md  manifest.json
docs/: DATASET_PHILOSOPHY.md  GEMINI_PROTOCOL_INVESTIGATION.md  PHASE_2A_ARCHITECTURE.md  PHASE_2A_IOS_SETUP.md  PHASE_2A_V2_INCREMENTAL_SEARCH.md  SARVAM_PROTOCOL_INVESTIGATION.md  aeneas_spike.md  alignment_accuracy.md  feedback_channel_spec.md  finetuning_plan.md  phase_2b_v1_findings.md  whisper_coreml_setup.md
evaluation/: phase1_large-v3_report.md  phase1_large-v3_summary.csv  phase1_medium_report.md  phase1_medium_summary.csv  phase1_report.md  phase1_summary.csv
ios/GurbaniLens/: project.yml
ios/GurbaniLensCore/: Package.swift
samples/: MANIFEST.md  registry.json
scripts/: aeneas_spike.py  align_sample.py  build_dataset.py  evaluate.py  fetch_android_deps.sh  fetch_corpus.py  fetch_ios_deps.sh  fetch_samples.py  inject_env_to_plist.sh
scripts/anvaad-investigation/: anvaad-unicode.js
server/: .env.example  CURRENT_STATE.md  DEPLOY.md  Dockerfile  README.md  ecosystem.config.js  package.json  vitest.config.js
server/src/: db.js  index.js  test-harness.js
server/test/: feedback.test.js  privacy.test.js  transcribe.test.js
tests/: test_corpus.py  test_matcher.py
(+120 files in other folders)
